--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,12 @@ body {
 .clock {
   width: 300px;
   height: 300px;
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 2px solid #301934;
+  background-color: rgba(245, 234, 80, 0.8);
   position: relative;
-  border-radius: 50%;
+  border-top-left-radius: 20%;
+  border-top-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 20%;
 }
 
 .clock .number {
@@ -89,7 +91,7 @@ body {
   left: 50%;
 
   background-color: #000;
-  border: 1px solid #fff;
+
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   transform-origin: bottom;
@@ -100,16 +102,16 @@ body {
 .clock .hand.second {
   width: 3px;
   height: 45%;
-  background-color: red;
+  background-color: rgb(168, 206, 146);
 }
 .clock .hand.minute {
   width: 7px;
   height: 40%;
-  background-color: #000;
+  background-color: rgb(247, 189, 65);
 }
 
 .clock .hand.hour {
   width: 10px;
   height: 35%;
-  background-color: #000;
+  background-color: rgb(247, 189, 65);
 }
