--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 .clock {
   width: 300px;
   height: 300px;
-  background-color: rgba(245, 234, 80, 0.8);
+  background-color: #ffdc44;
   position: relative;
   border-top-left-radius: 20%;
   border-top-right-radius: 50%;
@@ -34,6 +34,7 @@ body {
   height: 100%;
   text-align: center;
   transform: rotate(var(--rotation));
+  color: #fff;
   font-size: 1.5rem;
 }
 
@@ -89,9 +90,7 @@ body {
   position: absolute;
   bottom: 50%;
   left: 50%;
-
   background-color: #000;
-
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   transform-origin: bottom;
@@ -107,11 +106,11 @@ body {
 .clock .hand.minute {
   width: 7px;
   height: 40%;
-  background-color: rgb(247, 189, 65);
+  background-color: #fff;
 }
 
 .clock .hand.hour {
   width: 10px;
   height: 35%;
-  background-color: rgb(247, 189, 65);
+  background-color: #fff;
 }
